Update the header of SIP-23:
- Add @adriaanm as this SIP's champion
- Mention that there is no commitment to definitely have it in
- Add last update date

--- a/sips/pending/_posts/2014-06-27-42.type.md
+++ b/sips/pending/_posts/2014-06-27-42.type.md
@@ -6,6 +6,13 @@ title: SIP-23 - Literal-based singleton types
 
 **By: George Leontiev, Eugene Burmako, Jason Zaugg, Adriaan Moors, Paul Phillips**
 
+<span class="label warning">Note: This SIP is considered a "good idea", but is a work-in-process.</span>
+<span class="label warning">There is no guarantee that it will not be dropped if at some point it is decided that its foundation is not good enough.</span>
+
+<span class="label success">Champion: Adriaan Moors</span>
+
+<span class="label success">Last update: July 9, 2014</span>
+
 ## Motivation
 
 Singleton types bridge the gap between the value level and the type level and hence allow the exploration in Scala of techniques which would typically only be available in languages with support for full-spectrum dependent types.
