Update SIP-23 with received feedback.

--- a/sips/pending/_posts/2014-06-27-42.type.md
+++ b/sips/pending/_posts/2014-06-27-42.type.md
@@ -11,7 +11,7 @@ title: SIP-23 - Literal-based singleton types
 
 <span class="label success">Champion: Adriaan Moors</span>
 
-<span class="label success">Last update: July 9, 2014</span>
+<span class="label success">Last update: July 15, 2014</span>
 
 ## Motivation
 
@@ -84,7 +84,9 @@ Currently there is a possibility to use singleton types in some contexts, but on
 
 Getting the inhabitant of a singleton type, as described by [Travis Brown](http://meta.plasm.us/posts/2013/06/28/singleton-types-for-literals-in-scala/), can be done with a macro, which is a part of the [proposed implementation](https://github.com/folone/scala/commit/094883efb4d1c50981cea41f049c3930c8efbc3c).
 
-## Use cases
+**Note:** This is one of the many parts of this SIP that are in flux, and are likely to change in the future. We might not need to generate instances of `SingleInhabitant` typeclass, but instead only use `<: Singleton` type bound for this. See [SI-5103](https://issues.scala-lang.org/browse/SI-5103). The name is also likely to change to `valueOf[T]`.
+
+## Possible use cases
 
 There are quite a few use cases we’ve collected on the [mailing list](https://groups.google.com/forum/#!topic/scala-language/9VEnFZImyJI). Some of them are as follows.
 
@@ -147,28 +149,17 @@ But
 
 ### Shapeless
 
-The whole approach that shapeless currently uses for managing singleton types (which it calls witnesses) can be rewritten using this feature instead of macros. Specifically, [these invocations](https://github.com/milessabin/shapeless/blob/e3399e35a7bb17b286141f53827619a3dc98efe8/core/src/main/scala/shapeless/singletons.scala#L31-L38) of macros can be rewritten in the following way:
+[Shapeless](https://github.com/milessabin/shapeless/) is a project that makes heavy use of singleton types already. It has all the machinery in place to make working with them nicer. Hence, it is a source of inspiration for working on this SIP. This change does not bring much to the table for shapeless though. One of the useful cases would be an ability to explicitly specify types for e.g. records in a more convenient way than possible with the current version of scala:
 
-    object Witness {
-      type Aux[T0] = Witness { type T = T0 }
-      type Lt[Lub] = Witness { type T <: Lub }
-
-      implicit def apply[U : SingleInhabitant]: Witness.Aux[U] =
-        new Witness {
-          type T = U
-          val value = inhabitant[T]
-        }
-
-      implicit def apply[U](t: U): Witness.Lt[U] =
-        new Witness {
-          type T = t.type
-          val value: T = t
-        }
-    }
-
-This feature is then heavily used to implement [records](https://github.com/milessabin/shapeless/blob/master/examples/src/main/scala/shapeless/examples/records.scala), [labeled generics](https://github.com/milessabin/shapeless/blob/master/examples/src/main/scala/shapeless/examples/labelledgeneric.scala), etc.
-
-**Note:** According to Miles Sabin, this can also be done with an existing fix (by Jason Zaugg) to [SI-5103](https://issues.scala-lang.org/browse/SI-5103).
+    val book: "author" ->> String ::
+              "title" ->> String ::
+              "id" ->> Int ::
+              "price" ->> Double :: HNil =
+     ("author" ->> "Benjamin Pierce") ::
+     ("title"  ->> "Types and Programming Languages") ::
+     ("id"     ->>  262162091) ::
+     ("price"  ->>  44.11) ::
+     HNil
 
 ### Others
 
@@ -182,7 +173,7 @@ This document proposes to extend an existing very limited syntax for singleton t
 
     type _42 = 42.type
     type Unt = ().type
-    type _ 1 = 1 // .type is optional for literals
+    type _1 = 1 // .type is optional for literals
     final val x = 1
     type one = x.type // … but mandatory for identifiers
 
