--- a/overviews/core/_posts/2012-09-20-futures.md
+++ b/overviews/core/_posts/2012-09-20-futures.md
@@ -692,8 +692,10 @@ exceptions normally not handled by the client code and at the same time inform
 the client in which future the computation failed.
 
 Fatal exceptions (as determined by `NonFatal`) are rethrown in the thread executing
-the failed asynchronous computation. See [`NonFatal`](http://www.scala-lang.org/api/current/index.html#scala.util.control.NonFatal$)
-for a more precise semantics description.
+the failed asynchronous computation. This informs the code managing the executing
+threads of the problem and allows it to fail fast, if necessary. See
+[`NonFatal`](http://www.scala-lang.org/api/current/index.html#scala.util.control.NonFatal$)
+for a more precise description of the semantics.
 
 ## Promises
 
