Add languages header to core articles

--- a/overviews/core/_posts/2010-11-30-actors.md
+++ b/overviews/core/_posts/2010-11-30-actors.md
@@ -2,7 +2,7 @@
 layout: overview
 title: The Scala Actors API
 overview: actors
-languages: [es]
+languages: [zh-cn, es]
 ---
 
 **Philipp Haller and Stephen Tu**
