--- a/overviews/core/_posts/2012-09-20-futures.md
+++ b/overviews/core/_posts/2012-09-20-futures.md
@@ -4,7 +4,7 @@ title: Futures and Promises
 label-color: success
 label-text: New in 2.10
 overview: futures
-languages: [ja]
+languages: [ja, zh-cn]
 ---
 
 **By: Philipp Haller, Aleksandar Prokopec, Heather Miller, Viktor Klang, Roland Kuhn, and Vojin Jovanovic**
