--- a/overviews/core/_posts/2012-09-20-futures.md
+++ b/overviews/core/_posts/2012-09-20-futures.md
@@ -887,7 +887,7 @@ Consider the following producer-consumer example, in which one computation
 produces a value and hands it off to another computation which consumes
 that value. This passing of the value is done using a promise.
 
-    import scala.concurrent.{ future, promise }
+    import scala.concurrent.{ Future, Promise }
     import scala.concurrent.ExecutionContext.Implicits.global
     
     val p = Promise[T]()
