Change 'future' to 'Future' in examples

--- a/overviews/core/_posts/2010-11-30-actors.md
+++ b/overviews/core/_posts/2010-11-30-actors.md
@@ -275,11 +275,11 @@ In addition, a `Future` can be queried to find out whether its result
 is available without blocking using the `isSet` method.
 
 A message send-with-future is not the only way to obtain a
-future. Futures can also be created from computations using the `future`
-method. In the following example, the computation body is started to
+future. Futures can also be created from computations directly.
+In the following example, the computation body is started to
 run concurrently, returning a future for its result:
 
-    val fut = future { body }
+    val fut = Future { body }
     // ...
     fut() // wait for future
 
