--- a/sips/pending/_posts/2013-06-10-spores.md
+++ b/sips/pending/_posts/2013-06-10-spores.md
@@ -41,7 +41,7 @@ process incoming requests.
 
     def receive = {
       case Request(data) =>
-        future {
+        Future {
           val result = transform(data)
           sender ! Response(result)
         }
