--- a/overviews/core/_posts/2010-11-30-actors.md
+++ b/overviews/core/_posts/2010-11-30-actors.md
@@ -227,7 +227,7 @@ return, we can use `andThen` to register the code which prints the
 greeting as the actor's continuation.
 
 Note that there is a *type ascription* that follows the `react`
-invocation (`: Unit`). Basically, it let's you treat the result of
+invocation (`: Unit`). Basically, it lets you treat the result of
 `react` as having type `Unit`, which is legal, since the result of an
 expression can always be dropped. This is necessary to do here, since
 `andThen` cannot be a member of type `Nothing` which is the result
