--- a/overviews/core/_posts/2012-09-20-futures.md
+++ b/overviews/core/_posts/2012-09-20-futures.md
@@ -80,7 +80,7 @@ and no computation can proceed.
 
 By default the `ExecutionContext.global` sets the parallelism level of its underlying fork-join pool to the amount of available processors 
 ([Runtime.availableProcessors](http://docs.oracle.com/javase/7/docs/api/java/lang/Runtime.html#availableProcessors%28%29)).
-This configuration can be overriden by setting one (or more) of the following VM attributes:
+This configuration can be overridden by setting one (or more) of the following VM attributes:
 
   * scala.concurrent.context.minThreads - defaults to `Runtime.availableProcessors`
   * scala.concurrent.context.numThreads - can be a number or a multiplier (N) in the form 'xN' ;  defaults to `Runtime.availableProcessors`
