--- a/sips/pending/_posts/2013-06-10-spores.md
+++ b/sips/pending/_posts/2013-06-10-spores.md
@@ -2,6 +2,9 @@
 layout: sip
 disqus: true
 title: SIP-21 - Spores
+
+vote-status: under review
+vote-text: Next iteration takes place in November 2016. Check <a href="http://localhost:4000/sips/minutes/sip-20th-september-minutes.html">September's minutes</a>.
 ---
 
 **By: Heather Miller, Martin Odersky, and Philipp Haller**
