fix Github -> GitHub

--- a/sips/pending/_posts/2013-06-30-async.md
+++ b/sips/pending/_posts/2013-06-30-async.md
@@ -291,7 +291,7 @@ simplifications).
 
 1. [The Scala Futures API][1]
 2. [The Play! Framework][2]
-3. [Scala Async on Github][3]
+3. [Scala Async on GitHub][3]
 
   [1]: http://docs.scala-lang.org/overviews/core/futures.html "ScalaFutures"
   [2]: http://www.playframework.com/ "Play"
