Update completed sips and move trailing commas

--- a/sips/pending/_posts/2013-06-30-async.md
+++ b/sips/pending/_posts/2013-06-30-async.md
@@ -4,7 +4,7 @@ disqus: true
 title: SIP-22 - Async
 
 vote-status: postponed
-vote-text: Authors have asked to postpone until further notice. They will eventually open the proposal when some details in the implementation are ready. Check <a href="http://localhost:4000/sips/minutes/sip-minutes.html">July's minutes</a>.
+vote-text: Authors have asked to postpone this proposal until further notice. They will eventually open the proposal when some details in the implementation are ready. Check <a href="http://localhost:4000/sips/minutes/sip-minutes.html">July's minutes</a>.
 ---
 
 **By: Philipp Haller and Jason Zaugg**
