--- a/sips/pending/_posts/2013-06-10-spores.md
+++ b/sips/pending/_posts/2013-06-10-spores.md
@@ -4,7 +4,7 @@ disqus: true
 title: SIP-21 - Spores
 
 vote-status: under review
-vote-text: Next iteration takes place in November 2016. Check <a href="http://localhost:4000/sips/minutes/sip-20th-september-minutes.html">September's minutes</a>.
+vote-text: Next iteration takes place in January/February 2017 by request of the authors.
 ---
 
 **By: Heather Miller, Martin Odersky, and Philipp Haller**
