--- a/sips/pending/_posts/2014-06-27-42.type.md
+++ b/sips/pending/_posts/2014-06-27-42.type.md
@@ -7,14 +7,23 @@ vote-status: dormant
 vote-text: This proposal is dormant because original authors are not available for its review. There is an implementation <a href="https://github.com/scala/scala/pull/5310">here</a>.
 ---
 
-**By: George Leontiev, Eugene Burmako, Jason Zaugg, Adriaan Moors, Paul Phillips**
+**By: George Leontiev, Eugene Burmako, Jason Zaugg, Adriaan Moors, Paul Phillips, Oron Port**
 
-<span class="label warning">Note: This SIP is considered a "good idea", but is a work-in-process.</span>
-<span class="label warning">There is no guarantee that it will not be dropped if at some point it is decided that its foundation is not good enough.</span>
+## History
+
+| Date           | Version                                                            |
+| ---------------|--------------------------------------------------------------------|
+| Jun 27th 2014  | Initial SIP                                                        |
+| Jul 15th 2014  | Last update to SIP before declared dormant                         |
+| TBD            | Dormant because original authors are not available for its review  |
+| Feb 9th 2017   | New author volunteered to be update the SIP for review             |
+
+### Current status
+Literal types were implemented in both Typelevel Scala and Dotty.
+New author volunteered to update this SIP, and bring it to an accepted status after committee review.
+Require approval to change SIP status from 'dormant' to 'pending'.
 
 <span class="label success">Champion: Adriaan Moors</span>
-
-<span class="label success">Last update: July 15, 2014</span>
 
 ## Motivation
 
