Improve punctuation in Polish translation
Other than that there are a few changes related to wording etc.

--- a/pl/tutorials/tour/_posts/2017-02-13-currying.md
+++ b/pl/tutorials/tour/_posts/2017-02-13-currying.md
@@ -12,7 +12,7 @@ tutorial-next: case-classes
 tutorial-previous: nested-functions
 ---
 
-Funkcja może określić dowolną ilość list parametrów. Kiedy jest ona wywołana dla mniejszej liczby niż zostało to zdefiniowane, wtedy zwraca ona funkcję pobierającą dalsze listy parametrów jako jej argument.
+Funkcja może określić dowolną ilość list parametrów. Kiedy jest ona wywołana dla mniejszej liczby niż zostało to zdefiniowane, zwraca funkcję pobierającą dalsze listy parametrów jako jej argument.
 
 Przykład rozwijania funkcji:
 
@@ -32,7 +32,7 @@ object CurryTest extends App {
 }
 ```
 
-_Uwaga: metoda `modN` jest częściowo zastosowana dla dwóch wywołań `filter`, gdyż jest wywołana tylko dla jej pierwszego argumentu. Wyrażenie `modN(2)` zwraca funkcję typu `Int => Boolean` stąd też może być przekazane jako drugi argument funkcji `filter`._
+_Uwaga: metoda `modN` jest częściowo zastosowana dla dwóch wywołań `filter`, gdyż jest wywołana tylko dla jej pierwszego argumentu. Wyrażenie `modN(2)` zwraca funkcję typu `Int => Boolean` - stąd też może być przekazane jako drugi argument funkcji `filter`._
 
 Wynik działania powyższego programu:
 
