fixed next/previous links in pt-br tutorials tour

--- a/pt-br/tutorials/tour/_posts/2017-02-13-currying.md
+++ b/pt-br/tutorials/tour/_posts/2017-02-13-currying.md
@@ -7,8 +7,8 @@ discourse: true
 tutorial: scala-tour
 categories: tour
 num: 9
-tutorial-next: case-classes
-tutorial-previous: nested-functions
+next-page: case-classes
+previous-page: nested-functions
 language: pt-br
 ---
 
