fixed next/previous links in pl tutorials tour

--- a/pl/tutorials/tour/_posts/2017-02-13-classes.md
+++ b/pl/tutorials/tour/_posts/2017-02-13-classes.md
@@ -8,8 +8,8 @@ tutorial: scala-tour
 categories: tour
 num: 3
 language: pl
-tutorial-next: traits
-tutorial-previous: unified-types
+next-page: traits
+previous-page: unified-types
 ---
 
 Klasy w Scali określają schemat obiektów podczas wykonania programu. Oto przykład definicji klasy `Point`:
