--- a/pl/tutorials/tour/_posts/2017-02-13-currying.md
+++ b/pl/tutorials/tour/_posts/2017-02-13-currying.md
@@ -8,8 +8,8 @@ tutorial: scala-tour
 categories: tour
 num: 9
 language: pl
-tutorial-next: case-classes
-tutorial-previous: nested-functions
+next-page: case-classes
+previous-page: nested-functions
 ---
 
 Funkcja może określić dowolną ilość list parametrów. Kiedy jest ona wywołana dla mniejszej liczby niż zostało to zdefiniowane, zwraca funkcję pobierającą dalsze listy parametrów jako jej argument.
