--- a/pl/tutorials/tour/_posts/2017-02-13-traits.md
+++ b/pl/tutorials/tour/_posts/2017-02-13-traits.md
@@ -8,8 +8,8 @@ tutorial: scala-tour
 categories: tour
 num: 4
 language: pl
-tutorial-next: mixin-class-composition
-tutorial-previous: classes
+next-page: mixin-class-composition
+previous-page: classes
 ---
 
 Zbliżone do interfejsów Javy cechy są wykorzystywane do definiowania typów obiektów poprzez określenie sygnatur wspieranych metod. Podobnie jak w Javie 8, Scala pozwala cechom na częściową implementację, tzn. jest możliwe podanie domyślnej implementacji dla niektórych metod. W przeciwieństwie do klas, cechy nie mogą posiadać parametrów konstruktora.
