fixed next/previous links in ko tutorials tour

--- a/ko/tutorials/tour/_posts/2017-02-13-classes.md
+++ b/ko/tutorials/tour/_posts/2017-02-13-classes.md
@@ -8,6 +8,9 @@ tutorial: scala-tour
 categories: tour
 num: 3
 language: ko
+
+next-page: traits
+previous-page: unified-types
 ---
 
 스칼라의 클래스는 런타임에 많은 객체로 인스턴스화 될 수 있는 정적 템플릿이다.
