--- a/ko/tutorials/tour/_posts/2017-02-13-currying.md
+++ b/ko/tutorials/tour/_posts/2017-02-13-currying.md
@@ -8,6 +8,9 @@ tutorial: scala-tour
 categories: tour
 num: 9
 language: ko
+
+next-page: case-classes
+previous-page: nested-functions
 ---
 
 메소드에는 파라미터 목록을 여럿 정의할 수 있다. 파라미터 목록의 수 보다 적은 파라미터로 메소드가 호출되면, 해당 함수는 누락된 파라미터 목록을 인수로 받는 새로운 함수를 만든다.
