fixed next/previous links in es tutorials tour

--- a/es/tutorials/tour/_posts/2017-02-13-classes.md
+++ b/es/tutorials/tour/_posts/2017-02-13-classes.md
@@ -8,6 +8,9 @@ tutorial: scala-tour
 categories: tour
 num: 4
 language: es
+
+next-page: case-classes
+previous-page: annotations
 ---
 En Scala, las clases son plantillas estáticas que pueden ser instanciadas por muchos objetos en tiempo de ejecución.
 Aquí se presenta una clase la cual define la clase `Point`:
