--- a/es/tutorials/tour/_posts/2017-02-13-traits.md
+++ b/es/tutorials/tour/_posts/2017-02-13-traits.md
@@ -8,6 +8,9 @@ tutorial: scala-tour
 categories: tour
 num: 24
 language: es
+
+next-page: upper-type-bounds
+previous-page: regular-expression-patterns
 ---
 
 _Nota de traducción: La palabra `trait` en inglés puede traducirse literalmente como `rasgo` o `caracteristica`. Preferimos la designación original trait por ser una característica muy natural de Scala._
