fixed next/previous links in ba tutorials tour

--- a/ba/tutorials/tour/_posts/2017-02-13-classes.md
+++ b/ba/tutorials/tour/_posts/2017-02-13-classes.md
@@ -9,6 +9,9 @@ categories: tour
 num: 3
 outof: 33
 language: ba
+
+next-page: traits
+previous-page: unified-types
 ---
 
 Klase u Scali su statički šabloni koji mogu biti instancirani u više objekata tokom izvršavanja programa (runtime).
