--- a/ba/tutorials/tour/_posts/2017-02-13-currying.md
+++ b/ba/tutorials/tour/_posts/2017-02-13-currying.md
@@ -9,6 +9,9 @@ categories: tour
 num: 9
 outof: 33
 language: ba
+
+next-page: pattern-matching
+previous-page: nested-functions
 ---
 
 Metode mogu definisati više lista parametara. 
