--- a/ba/tutorials/tour/_posts/2017-02-13-traits.md
+++ b/ba/tutorials/tour/_posts/2017-02-13-traits.md
@@ -9,6 +9,9 @@ categories: tour
 num: 4
 outof: 33
 language: ba
+
+next-page: mixin-class-composition
+previous-page: classes
 ---
 
 Slično Javinim interfejsima, trejtovi se koriste za definisanje tipova objekata navođenjem potpisa podržanih metoda.
