fix a typo, add missing space

--- a/tutorials/tour/_posts/2017-02-13-traits.md
+++ b/tutorials/tour/_posts/2017-02-13-traits.md
@@ -60,7 +60,7 @@ iterator.next()  // prints 1
 This `IntIterator` class takes a parameter `to` as an upper bound. It `extends Iterator[Int]` which means that the `next` method must return an Int.
 
 ## Subtyping
-Subtypes of traits can be used where a the trait is required.
+Subtypes of traits can be used where a trait is required.
 ```tut
 import scala.collection.mutable.ArrayBuffer
 
