More progress on SIPs

--- a/_sips/sips/2014-06-27-42.type.md
+++ b/_sips/sips/2014-06-27-42.type.md
@@ -4,6 +4,7 @@ discourse: true
 title: SIP-23 - Literal-based singleton types
 
 vote-status: pending
+permalink: /sips/:title.html
 ---
 
 **By: George Leontiev, Eugene Burmako, Jason Zaugg, Adriaan Moors, Paul Phillips, Oron Port**
