Fix typos in SIPs

--- a/_sips/sips/2014-06-27-42.type.md
+++ b/_sips/sips/2014-06-27-42.type.md
@@ -490,7 +490,7 @@ applications which work with large datasets.
   derivation.
 
   Implicit resolution is Scala's mechanism for inferring values from types and in current Scala
-  shapeless provides a macro-based materialier for instances of its `Witness` type class. This SIP
+  shapeless provides a macro-based materializer for instances of its `Witness` type class. This SIP
   adds a directly compiler supported type class as a replacement,
 
   ```
