Add redirect_froms in all the SIPs

--- a/_sips/sips/2014-06-27-42.type.md
+++ b/_sips/sips/2014-06-27-42.type.md
@@ -5,6 +5,7 @@ title: SIP-23 - Literal-based singleton types
 
 vote-status: complete
 permalink: /sips/:title.html
+redirect_from: /sips/pending/42.type.html
 ---
 
 **Authors: George Leontiev, Eugene Burmako, Jason Zaugg, Adriaan Moors, Paul Phillips, Oron Port, Miles
