--- a/_sips/sips/2013-06-10-spores.md
+++ b/_sips/sips/2013-06-10-spores.md
@@ -6,6 +6,7 @@ title: SIP-21 - Spores
 vote-status: "under-review"
 vote-text: Next iteration takes place in January/February 2017 by request of the authors.
 permalink: /sips/:title.html
+redirect_from: /sips/pending/spores.html
 ---
 
 **By: Heather Miller, Martin Odersky, and Philipp Haller**
