Plural of "modulus" is "moduli".

--- a/_sips/sips/2014-06-27-42.type.md
+++ b/_sips/sips/2014-06-27-42.type.md
@@ -324,7 +324,7 @@ case class Residue[M <: Int](n: Int) extends AnyVal {
 ```
 
 Given this definition we can work with modular numbers without any danger of mixing numbers with
-different modulii,
+different moduli,
 
 ```
 val fiveModTen = Residue[10](5)
