--- a/_sips/sips/2014-06-27-42.type.md
+++ b/_sips/sips/2014-06-27-42.type.md
@@ -455,7 +455,7 @@ applications which work with large datasets.
   ```
 
   This SIP updates the specification to match the current implementation and then adds the further
-  refinement that an explict upper bound of `Singleton` indicates that a singleton type should be
+  refinement that an explicit upper bound of `Singleton` indicates that a singleton type should be
   inferred.
 
   Given,
@@ -592,7 +592,7 @@ the singleton types). This is desirable, but due to value class restrictions, en
 primitive types (such as `Int`).
 
 If we implemented `ValueOf[A]` as an opaque type instead of a value class, then this boxing
-would be ellided, and the `valueOf[A]` method would be compiled to an identity function.
+would be elided, and the `valueOf[A]` method would be compiled to an identity function.
 
 ## Related Scala issues resolved by the literal types implementation
 
